test/fail/multidim.min
program
    array vector[10][10]
start
end
